--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Battle City Online</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/tank.js"></script>
+  <script type="text/javascript" src="js/bullet.js"></script>
+  <script type="text/javascript" src="js/enemy.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
