simplify code to get basics working

--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <html>
 <head>
   <title>Battle City Online</title>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/tank.js"></script>
-  <script type="text/javascript" src="js/bullet.js"></script>
-  <script type="text/javascript" src="js/enemy.js"></script>
-  <script type="text/javascript" src="js/game.js"></script>
+  
+  <script type="text/javascript" src="js/gameengine.js"></script>
 </head>
 <body>
-  <canvas id="game" style="width: 640px; height: 480px;"></canvas>
+<canvas id="surface" width="640" height="480" style="background: black"></canvas>
 </body>
 </html>
