--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 <head>
   <title>Battle City Online</title>
-  
-  <script type="text/javascript" src="js/gameengine.js"></script>
+
 </head>
 <body>
-<canvas id="surface" width="640" height="480" style="background: black"></canvas>
+  <canvas id="game" width="640" height="480" style="background: grey"></canvas>
+  <script type="text/javascript" src="js/tank.js"></script>
+  <script type="text/javascript" src="js/gameengine.js"></script>
 </body>
 </html>
