debugging in progress

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <html>
 <head>
   <title>Battle City Online</title>
-
 </head>
 <body>
-  <canvas id="game" width="640" height="480" style="background: grey"></canvas>
-  <script type="text/javascript" src="js/tank.js"></script>
+  <canvas id="gamecanvas" width="640" height="480" style="background: black"></canvas>
   <script type="text/javascript" src="js/gameengine.js"></script>
 </body>
 </html>
