--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <canvas id="gamecanvas" width="640" height="480" style="background: black"></canvas>
+  <script type="text/javascript" src="js/tank.js"></script>
+  <script type="text/javascript" src="js/Eagle.js"></script>
   <script type="text/javascript" src="js/gameengine.js"></script>
 </body>
 </html>
