--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<canvas id="gamecanvas" width="640" height="480" style="background: #E0E0E0"></canvas>
 		</div>
 		<script type="text/javascript" src="js/tank.js"></script>
-		<script type="text/javascript" src="js/building.js"></script>
+		<script type="text/javascript" src="js/levels.js"></script>
 		<script type="text/javascript" src="js/Eagle.js"></script>
 		<script type="text/javascript" src="js/Bullet.js"></script>
 		<script type="text/javascript" src="js/gameengine.js"></script>
