--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 	<head>
-		<title>Battle City Online</title>
+		<title>FakePlastic's Battle City</title>
 		<style type="text/css">
 			body {
 				font-family: Segoe UI Light, Arial, Helvetica;
@@ -37,7 +37,7 @@
 	</head>
 	<body>
 		<div>
-			<span id="T"><b><h1>FakePlastic Battle City</h1></b></span>
+			<span id="T"><b><h1>FakePlastic's Battle City</h1></b></span>
 			<canvas id="gamecanvas" width="640" height="480" style="background: #E0E0E0"></canvas>
 		</div>
 		<script type="text/javascript" src="js/tank.js"></script>
