--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<script type="text/javascript" src="js/levels.js"></script>
 		<script type="text/javascript" src="js/Eagle.js"></script>
 		<script type="text/javascript" src="js/Bullet.js"></script>
+		<script type="text/javascript" src="js/assetman.js"></script>
 		<script type="text/javascript" src="js/gameengine.js"></script>
 	</body>
 </html>
