SEPERATED OUT STYLE SHEET, ADDED CUSTOM FONT

--- a/index.html
+++ b/index.html
@@ -3,43 +3,15 @@
 <html>
 	<head>
 		<title>FakePlastic's Battle City</title>
-		<style type="text/css">
-			body {
-				font-family: Segoe UI Light, Arial, Helvetica;
-				background-color: #000;
-				/*background-image: url(img/bg.jpg);
-				background-repeat: no-repeat;*/
-				margin: 0;
-			}
-			canvas {
-				margin-left: auto;
-				margin-right: auto;
-				display: block;
-			}
-			div {
-				margin: 30px auto;
-				width: 640px;
-				text-align: center;
-			}
-			#T {
-				font-family: "Lucida Console";
-				color: #FFFFFF;
-				text-shadow: 
-				0.1em 0.1em 0.1em #000,
-				0 -0.1em 3px #FE8811,
-				0 -0.1em 8px #E68A00,
-				0 -0.2em 12px #FFAD33,
-				0 -0.3em 16px #FFAD00,
-				0 -0.4em 20px #FFFF00,
-				0 -1em 16px #FFFFFF;
-			}
-		</style>
+		<link rel="stylesheet" href="style.css">
+
 	</head>
 	<body>
 		<div>
 			<span id="T"><b><h1>FakePlastic's Battle City</h1></b></span>
 			<canvas id="gamecanvas" width="640" height="480" style="background: #E0E0E0"></canvas>
-		</div>
+		<p class="typeWriter">More to come. Stay frosty.</p>
+				</div>
 		<script type="text/javascript" src="js/tank.js"></script>
 		<script type="text/javascript" src="js/levels.js"></script>
 		<script type="text/javascript" src="js/Eagle.js"></script>
